--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "files.autoSave": "afterDelay",
+  "files.autoSave": "afterDela",
   "files.autoSaveDelay": 0,
   "editor.fontSize": 22,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
